fixed overflow of category layers on small screen

--- a/src/components/categories/Category.scss
+++ b/src/components/categories/Category.scss
@@ -28,7 +28,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding-bottom: 0.5em;
+  padding-bottom: 0.25em;
   overflow-x: auto;
   pointer-events: auto;
   .category {
